# rdk-aamp

./: .gitignore  AAMP-UVE-API.md  AampCacheHandler.cpp  AampCacheHandler.h  AampConfig.cpp  AampConfig.h  AampConstants.h  AampCurlStore.cpp  AampCurlStore.h  AampDRMLicPreFetcher.cpp  AampDRMLicPreFetcher.h  AampDRMLicPreFetcherInterface.h  AampDefine.h  AampDrmCallbacks.h  AampDrmSystems.h  AampEvent.cpp  AampEvent.h  AampEventListener.cpp  AampEventListener.h  AampEventManager.cpp  AampEventManager.h  AampFnLogger.h  AampGstUtils.cpp  AampGstUtils.h  AampJsonObject.cpp  AampJsonObject.h  AampLogManager.h  AampMediaType.h  AampMemoryUtils.cpp  AampMemoryUtils.h  AampMutex.h  AampProfiler.cpp  AampProfiler.h  AampRfc.cpp  AampRfc.h  AampScheduler.cpp  AampScheduler.h  AampUtils.cpp  AampUtils.h  Accessibility.hpp  (+70 more)
Linux/: .gitignore  README.md  clean.sh  install-linux-deps.sh  install-linux.sh
Linux/patches/: aampmetrics.patch
OSX/: OSxSetup.md  aamp-cli.xcscheme  aampcli.csv  install-aamp.sh
OSx/: OSxSetup.md  install-aamp.sh
OSx/patches/: 0009-qtdemux-aamp-tm_gst-1.16.patch  0013-qtdemux-remove-override-segment-event_gst-1.16.patch  0014-qtdemux-clear-crypto-info-on-trak-switch_gst-1.16.patch  0021-qtdemux-aamp-tm-multiperiod_gst-1.16.patch
aamp.xcodeproj/: project.pbxproj
closedcaptions/: AampCCManager.cpp  AampCCManager.h
closedcaptions/rdk/: AampRDKCCManager.cpp  AampRDKCCManager.h
closedcaptions/subtec/: AampSubtecCCManager.cpp  AampSubtecCCManager.h  CCDataController.cpp  CCDataController.h  SubtecConnector.cpp  SubtecConnector.h
cmake/: FindWPEFramework.cmake
drm/: AampDRMSessionManager.cpp  AampDRMSessionManager.h  AampDRMutils.cpp  AampDRMutils.h  AampDrmData.h  AampDrmHelper.cpp  AampDrmInfo.h  AampDrmMediaFormat.h  AampDrmSession.cpp  AampDrmSession.h  AampHlsDrmSessionManager.cpp  AampHlsDrmSessionManager.h  AampHlsOcdmBridge.cpp  AampHlsOcdmBridge.h  AampIonMemorySystem.cpp  AampIonMemorySystem.h  AampMemorySystem.h  AampOcdmBasicSessionAdapter.cpp  AampOcdmBasicSessionAdapter.h  AampOcdmGstSessionAdapter.cpp  AampOcdmGstSessionAdapter.h  AampSecManager.cpp  AampSecManager.h  AampSharedMemorySystem.cpp  AampSharedMemorySystem.h  ClearKeyDrmSession.cpp  ClearKeyDrmSession.h  HlsDrmBase.h  ZeroDrmAccessAdapter.cpp  ZeroDrmAccessAdapter.h  aampdrmsessionfactory.cpp  aampdrmsessionfactory.h  aampoutputprotection.cpp  aampoutputprotection.h  opencdmsession.cpp  opencdmsession.h  opencdmsessionadapter.cpp  opencdmsessionadapter.h  playreadydrmsession.cpp  playreadydrmsession.h  (+1 more)
drm/aes/: aamp_aes.cpp  aamp_aes.h
drm/ave/: StubsForAVEPlayer.cpp  drm.cpp  drm.h
drm/helper/: AampAveDrmHelper.cpp  AampAveDrmHelper.h  AampClearKeyHelper.cpp  AampClearKeyHelper.h  AampDrmHelper.cpp  AampDrmHelper.h  AampDrmHelperFactory.cpp  AampPlayReadyHelper.cpp  AampPlayReadyHelper.h  AampVanillaDrmHelper.h  AampVerimatrixHelper.cpp  AampVerimatrixHelper.h  AampVgdrmHelper.cpp  AampVgdrmHelper.h  AampWidevineDrmHelper.cpp  AampWidevineDrmHelper.h
isobmff/: isobmffbox.cpp  isobmffbox.h  isobmffbuffer.cpp  isobmffbuffer.h  isobmffprocessor.cpp  isobmffprocessor.h
jsbindings/: jsbindings-version.h  jsbindings.cpp  jsbindings.h  jscontroller-jsbindings.cpp  jscontroller-jsevent.cpp  jscontroller-jsevent.h  jsevent.cpp  jsevent.h  jseventlistener.cpp  jseventlistener.h  jsmediaplayer.cpp  jsmediaplayer.h  jsutils.cpp  jsutils.h
metrics/: HTTPStatistics.cpp  ProfileInfo.h  VideoStat.cpp  VideoStat.h
rfcdefaults/: aamp.ini
subtec/: ClosedCaptionsPacket.hpp  PacketSender.cpp  PacketSender.hpp  SubtecChannel.hpp  SubtecChannelManager.cpp  SubtecFactory.hpp  SubtecPacket.hpp  TtmlPacket.hpp  TtmlSubtecParser.cpp  TtmlSubtecParser.hpp  WebVttPacket.hpp  WebVttSubtecParser.cpp  WebVttSubtecParser.hpp  WebvttSubtecDevParser.cpp  WebvttSubtecDevParser.hpp  WebvttSubtecParser.cpp  WebvttSubtecParser.hpp
subtec/libsubtec/: PacketSender.cpp  (+8 more)
subtitle/: subtitleParser.h  vttCue.h  webvttParser.cpp  webvttParser.h
test/: CMakeLists.txt  Remote.cpp  XFCIrKeyCodes.h  aampcli.cpp  playbintest.cpp  uveLightningPlayer.html  uveMinPlayer.html
test/Drm/: CMakeLists.txt  README.txt  drmHelperTest.cpp  drmSessionTest.cpp  drmTestUtils.cpp  drmTestUtils.h  drmTests.cpp  drmUtilsTest.cpp  legacyDrmSessionTest.cpp  runtests.sh
test/Drm/mocks/: aampMocks.cpp  aampMocks.h  config.h  curlMocks.c  curlMocks.h  gstMocks.c  openSslMocks.c  opencdmMocks.c  opencdmMocks.cpp  opencdmMocks.h  pthreadMocks.c  secclientMocks.c
test/smoketest/: AampSmokeTestPlayer.cpp  AampSmokeTestPlayer.h  CMakeLists.txt  TuneSmokeTest.cpp  TuneSmokeTest.h  gtest_main.cpp
test/utests/: CMakeLists.txt  ReadMe.md  ReadMe.txt  run.sh
test/utests/fakes/: CMakeLists.txt  FakeABRManager.cpp  FakeAampCacheHandler.cpp  FakeAampCli.cpp  FakeAampConfig.cpp  FakeAampCurlStore.cpp  FakeAampEvent.cpp  FakeAampEventManager.cpp  FakeAampGstPlayer.cpp  FakeAampJsonObject.cpp  FakeAampLogManager.cpp  FakeAampMemoryUtils.cpp  FakeAampProfiler.cpp  FakeAampScheduler.cpp  FakeAampUtils.cpp  FakeAdManager.cpp  FakeCJSON.cpp  FakeCurl.cpp  FakeFragmentCollector_HLS.cpp  FakeFragmentCollector_MPD.cpp  FakeFragmentCollector_Progressive.cpp  FakeHDMIIN.cpp  FakeHybridABRManager.cpp  FakeIPVideoStat.cpp  FakeIsoBmffBuffer.cpp  FakeMediaStreamContext.cpp  FakeOTA.cpp  FakePlayerInstanceAamp.cpp  FakePrivateInstanceAAMP.cpp  FakeStreamAbstractionAamp.cpp  FakeTtmlSubtecParser.cpp  FakeWebVTTParser.cpp  FakeWebVTTSubtecDevParser.cpp  FakeWebVTTSubtecParser.cpp
test/utests/mocks/: MockAampConfig.h  MockAampEventManager.h  MockAampGstPlayer.h  MockAampJsonObject.h  MockAampScheduler.h  MockPlayerInstanceAAMP.h  MockPrivateInstanceAAMP.h  MockStreamAbstractionAAMP.h
test/utests/tests/: CMakeLists.txt
test/utests/tests/AampCliSet/: CMakeLists.txt  ExecuteTests.cpp
test/utests/tests/PlayerInstanceAAMP/: CMakeLists.txt  PauseAtTests.cpp  PlayerInstanceAAMPTests.cpp
test/utests/tests/PrivateInstanceAAMP/: CMakeLists.txt  PauseAtTests.cpp
test/utests/tests/TextStyleAttributes/: CMakeLists.txt  GetAttributesFontSizeTests.cpp
(+147 files in other folders)
